<resources>
    <string name="app_name">HarrinsonHotelApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="precio_habitacion">S/ %1$s</string>
    <string name="precio_habitacion_promocion">antes S/ %1$s</string>
    <string name="tipohabitacion">Habitacion %1$s</string>
    <string name="detalle_description">Gracias por realizar su reserva, es necesario hacer el deposito del 50 %1$spara confimar su reserva (plazo maximo de 2 dias). Luego enviar la foto al siguiente numero de Whatsappp</string>
    <string name="nombre">Nombre : %1$s</string>
    <string name="apellido">Apellido : %1$s</string>
    <string name="email">Email : %1$s</string>
    <string name="dni">Dni : %1$s</string>
    <string name="fecha_de_reserva"> %1$s - %2$s</string>
    <string name="precio_total">TOTAL : %1$s</string>
    <string name="stado_reserva">%1$s</string>
    <!--token para mapbox-->
    <string name="access_token" translatable="false">pk.eyJ1IjoiYTE4MTAwMDU0IiwiYSI6ImNram1kbWp2djAzeGcycHBlMTZrZm9zODIifQ.gqZCO2usbJavClx7E0ix4A</string>
    <string name="name_hotel">Hotel Harrinson a su Servicio</string>
    <string name="ahora">ahora %1$s</string>
    <string name="code_bar">Codigo de Reserva : %1$s </string>
</resources>