<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infoUser.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/home_huesped_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="5dp"
                android:paddingTop="5dp"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/home_huesped_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="5dp"
                android:paddingTop="5dp"
                android:text="@string/apellido" />

            <TextView
                android:id="@+id/home_huesped_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_dni"
                android:drawablePadding="5dp"
                android:paddingTop="5dp"
                android:text="@string/dni" />

            <TextView
                android:id="@+id/home_huesped_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:paddingTop="5dp"
                android:text="@string/email" />

            <Button
                android:id="@+id/home_btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/amarillo_hotel"
                android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
                android:text="cerrar session" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_historial"
            android:layout_width="match_parent"
            android:layout_height="450dp"


            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Historial de Reserva"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>