<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_img_habitacion_promocion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/camaking"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_precio_habitacion_promocion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/precio_habitacion_promocion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_img_habitacion_promocion" />

            <TextView
                android:id="@+id/item_tipo_habitacion_promocion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" android:textSize="13sp"
                android:textStyle="bold"
                android:text="@string/tipohabitacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_precio_habitacion_promocion" />

            <TextView
                android:id="@+id/item_descripcion_habitacion_promocion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="bla bla bla habitacion habla bla bla"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_tipo_habitacion_promocion" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_outline_king_bed_24"
                app:layout_constraintBottom_toBottomOf="@+id/item_nrcamas_habitacion_promocion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_nrcamas_habitacion_promocion" />

            <TextView
                android:id="@+id/item_nrcamas_habitacion_promocion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="34dp"
                android:text="4"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/item_descripcion_habitacion_promocion" />

            <Button
                android:id="@+id/item_btn_ver_habitacion_promocion"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="Ver Habitacion"
                android:backgroundTint="@color/amarillo_hotel"
                android:textSize="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/item_nrcamas_habitacion_promocion"
                app:layout_constraintStart_toEndOf="@+id/item_nrcamas_habitacion_promocion"
                app:layout_constraintTop_toTopOf="@+id/item_nrcamas_habitacion_promocion"
                app:srcCompat="@drawable/ic_baseline_wifi_24" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_baseline_bathtub_24" />

            <TextView
                android:id="@+id/item_habitacion_descuento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/ahora"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/item_precio_habitacion_promocion"
                app:layout_constraintTop_toBottomOf="@+id/item_img_habitacion_promocion" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>